--- a/src/Pages/scores.css
+++ b/src/Pages/scores.css
@@ -26,9 +26,10 @@
 .card-header {
   /* background-color: #007bff; /* Change the background color to match your navbar color */
   color: black;
-
+  border-bottom: 1px solid gray;
   border-radius: 4px 4px 0 0;
-  padding: 8px;
+  padding-bottom: 8px;
+  margin-bottom: 5px;
   /* margin-bottom: 8px; */
 }
 
@@ -46,4 +47,22 @@
 .message {
   color: #444;
   margin: 0;
+}
+
+@media screen and (max-width:500px) {
+  .feedback-list {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width:501px) and (max-width:900px) {
+  .feedback-list {
+    width: 70%;
+  }
+}
+
+@media screen and (min-width:901px) {
+  .feedback-list {
+    width: 40%;
+  }
 }
